# whatd-you-have

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prompt.md  pyproject.toml
src/whatd_you_have/: __init__.py  agent.py  config.py  kimi.py  main.py  nagging.py  prompts.py  scheduler.py  storage.py
